kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: calculator-app-deployment
  labels:
    app: calculator-app

spec:
  replicas: 3

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: calculator-app

  template:
    metadata:
      labels:
        app: calculator-app

    spec:
      containers:
      - name: calculator-app
        image: simplebyte/simplybyte-calculator:3.0
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service

metadata:
  name: calculator-app-service
  labels:
    app: calculator-app

spec:
  type: NodePort

  selector:
    app: calculator-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30080
