kubernetes/replicaset_pod.yml
apiVersion: v1
kind: Service

metadata:
  name: calculator-app-service
  labels:
    app: calculator-app

spec:
  type: NodePort
  selector:
    app: calculator-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
